--- a/screenlogger/src/main/res/layout/view_screen_log_details.xml
+++ b/screenlogger/src/main/res/layout/view_screen_log_details.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/general_small_margin_10dp"
-            android:textColor="@color/white" />
+            android:textColor="@android:color/white" />
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
@@ -30,7 +30,7 @@
         android:layout_marginLeft="@dimen/general_small_margin_10dp"
         android:layout_marginRight="@dimen/general_small_margin_10dp"
         android:scrollbars="vertical"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:enabled="true"
         android:textIsSelectable="true"
         android:focusable="true"
